...
            const Text(
              'Nama Produk',
              style: TextStyle(fontSize: 15, fontWeight: FontWeight.w700),
            ),
            const SizedBox(height: 10),
            TextField(
              key: const Key('nama_produk'),
              controller: _namaController,
              decoration: InputDecoration(
                hintText: 'Contoh: Tas Kulit Premium',
                prefixIcon: const Icon(Icons.tag, color: Color(0xFF93c5fd)),
                border: OutlineInputBorder(
                  borderRadius: BorderRadius.circular(10),
...
            const Text(
              'Harga Jual (Rp)',
              style: TextStyle(fontSize: 15, fontWeight: FontWeight.w700),
            ),
            const SizedBox(height: 10),
            TextField(
              key: const Key('harga_produk'),
              controller: _hargaJualController,
              keyboardType: TextInputType.number,
              decoration: InputDecoration(
                hintText: '0',
                prefixText: 'Rp ',
                prefixIcon: const Icon(
...
            const Text(
              'Keterangan Produk',
              style: TextStyle(fontSize: 15, fontWeight: FontWeight.w700),
            ),
            const SizedBox(height: 10),
            TextField(
              key: const Key('deskripsi_produk'),
              controller: _keteranganController,
              maxLines: 4,
              decoration: InputDecoration(
                hintText: 'Deskripsi detail produk, bahan, fitur, dll...',
                prefixIcon: const Icon(
                  Icons.note_rounded,
...
