...
      ];
      _navigationDestinations = [
        buildNavDest(Icons.speed_rounded, Icons.speed_outlined, 'Dashboard'),
        buildNavDest(
          Icons.list_alt_rounded,
          Icons.list_alt_outlined,
          'Pesanan',
        ),
        buildNavDest(Icons.groups_rounded, Icons.groups_outlined, 'Pelanggan'),
        buildNavDest(
          Icons.view_in_ar_rounded,
          Icons.view_in_ar_outlined,
          'Tambah Produk',
        ),
      ];
    } else {
      // administrator — hanya Dashboard dan Arsip; Buat PO & tambah Pelanggan hanya untuk staf_penjualan
      _screens = [dashboardScreen, pesananScreen, arsipScreen];
      _navigationDestinations = [
...
